@@ -2,41 +2,81 @@ FROM thimico/jre7:latest
 
 MAINTAINER thimico
 
-ENV JBOSS_HOME /opt/jboss-as-7.1.1.Final
+ARG VERSION_ARG="6.4"
+ARG JBOSS_ADMIN_PASSWORD_ARG="admin123"
+ARG JBOSS_ADMIN_USER_ARG="admin"
 
-WORKDIR /build
+ENV VERSION=${VERSION_ARG} \
+    JBOSS_ADMIN_PASSWORD=${JBOSS_ADMIN_PASSWORD_ARG} \
+    JBOSS_ADMIN_USER=${JBOSS_ADMIN_USER_ARG}
 
-# Instalar libreoffice
-RUN apk update && apk add libreoffice
+ENV JBOSS_USER="jboss-eap-${VERSION}"
 
-RUN mkdir -p /opt \
- && apk add --update bash && rm -rf /var/cache/apk/* \
- && wget http://download.jboss.org/jbossas/7.1/jboss-as-7.1.1.Final/jboss-as-7.1.1.Final.tar.gz \
- && tar -zxf jboss-as-7.1.1.Final.tar.gz -C /opt \
- && rm -rf /build
+ENV JBOSS_FILE="${JBOSS_USER}.0.zip" \
+    JBOSS_USER_HOME="/home/${JBOSS_USER}"
 
-ADD content/libreoffice_iniciar.sh /usr/bin/libreoffice_iniciar.sh
-ADD content/sofficerc /etc/sofficerc
-ADD content/selodigital.txt /opt/jboss-as-7.1.1.Final
- RUN mkdir -p /opt/jboss-as-7.1.1.Final/modules/org/postgres/main/mod
- ADD content/module.xml /opt/jboss-as-7.1.1.Final/modules/org/postgres/main
- ADD content/postgresql-9.3-1102.jdbc41.jar /opt/jboss-as-7.1.1.Final/modules/org/postgres/main
- ADD content/postgresql-9.3-1102.jdbc41.jar.index /opt/jboss-as-7.1.1.Final/modules/org/postgres/main
- ADD content/standalone.conf /opt/jboss-as-7.1.1.Final/bin
-  RUN   mkdir /usr/share/fonts
- RUN   mkdir /usr/share/fonts/truetrype
+ENV JBOSS_URL="https://github.com/daggerok/jboss/releases/download/eap/${JBOSS_FILE}" \
+    JBOSS_HOME="${JBOSS_USER_HOME}/${JBOSS_USER}"
+
+RUN apk --no-cache --update add busybox-suid bash wget ca-certificates unzip sudo openssh-client shadow \
+ && addgroup ${JBOSS_USER}-group \
+ && echo "${JBOSS_USER} ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers \
+ && sed -i "s/.*requiretty$/Defaults !requiretty/" /etc/sudoers \
+ && adduser -h ${JBOSS_USER_HOME} -s /bin/bash -D -u 1025 ${JBOSS_USER} ${JBOSS_USER}-group \
+ && usermod -a -G wheel ${JBOSS_USER} \
+ && wget --no-cookies \
+         --no-check-certificate \
+         --header "Cookie: oraclelicense=accept-securebackup-cookie" \
+                  "http://download.oracle.com/otn-pub/java/jce/8/jce_policy-8.zip" \
+         -O /tmp/jce_policy-8.zip \
+ && unzip -o /tmp/jce_policy-8.zip -d /tmp \
+ && mv -f ${JAVA_HOME}/lib/security ${JAVA_HOME}/lib/backup-security || true \
+ && mv -f /tmp/UnlimitedJCEPolicyJDK8 ${JAVA_HOME}/lib/security
+
+USER ${JBOSS_USER}
+WORKDIR ${JBOSS_USER_HOME}
+
+ARG JAVA_OPTS_ARGS="\
+ -Djava.net.preferIPv4Stack=true \
+ -XX:+UnlockExperimentalVMOptions \
+ -XX:+UseCGroupMemoryLimitForHeap \
+ -XshowSettings:vm "
+
+ENV JAVA_OPTS="${JAVA_OPTS} ${JAVA_OPTS_ARGS}"
+
+CMD /bin/bash
+EXPOSE 8080 9990 8443
+ENTRYPOINT /bin/bash ${JBOSS_HOME}/bin/standalone.sh
+
+RUN wget -q ${JBOSS_URL} -O ${JBOSS_USER_HOME}/${JBOSS_FILE} \
+ && unzip ${JBOSS_USER_HOME}/${JBOSS_FILE} -d ${JBOSS_USER_HOME} \
+ && rm -rf ${JBOSS_USER_HOME}/${JBOSS_FILE} \
+ && sudo apk --no-cache --no-network --purge del busybox-suid unzip shadow \
+ && sudo rm -rf /var/cache/apk/* /tmp/* \
+ && ${JBOSS_HOME}/bin/add-user.sh ${JBOSS_ADMIN_USER} ${JBOSS_ADMIN_PASSWORD} --silent \
+ && echo "JAVA_OPTS=\"\$JAVA_OPTS -Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0\"" >> ${JBOSS_HOME}/bin/standalone.conf
+
+RUN   mkdir /usr/share/fonts
+RUN   mkdir /usr/share/fonts/truetrype
 ADD content/Fonts /usr/share/fonts/truetrype
- RUN fc-cache
+RUN fc-cache
 
-# Expose the ports we're interested in
-EXPOSE 8080 8443 9990 8100
- 
-VOLUME ["/tmp"]
 
-RUN chmod +x /usr/bin/libreoffice_iniciar.sh
+############################################ USAGE ##############################################
+# FROM thimico/jboss:eap-6.4                                                             		#
+# HEALTHCHECK --timeout=2s --retries=22 \                                                       #
+#         CMD wget -q --spider http://127.0.0.1:8080/my-service/health \                        #
+#          || exit 1                                                                            #
+# COPY --chown=jboss ./target/*.war ${JBOSS_HOME}/standalone/deployments/my-service.war         #
+#################################################################################################
 
-# Set the default command to run on boot
-# This will boot WildFly in the standalone mode and bind to all interface
-CMD  ["/usr/bin/libreoffice_iniciar.sh"]
+############################## DEBUG | MULTI-DEPLOYMENTS USAGE ##################################
+# FROM thimico/jboss:eap-6.4                                                             		#
+# # Debug:                                                                                      #
+# ENV JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005" #
+# EXPOSE 5005                                                                                   #
+# # Multi builds:                                                                               #
+# COPY --chown=jboss ./target/*.war ${JBOSS_HOME}/standalone/deployments/                       #
+#################################################################################################
 
-#rodar o comando: docker run --name jbossdt -v ~/docker_volumes/jbossdt:/opt/jboss-as-7.1.1.Final/standalone -p 8080:8080 jboss
+#rodar o comando: docker run --name jbossdt -v ~/docker_volumes/jbossdt:/opt/jboss-as-7.1.1.Final/standalone -p 8080:8080 thimico/jboss:jboss:eap-6.4 
